--- a/assets/syles/style.css
+++ b/assets/syles/style.css
@@ -10,7 +10,7 @@ body {
   height: 100vh;
   font-family: sans-serif;
   font-family: 'Shadows Into Light', cursive;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   overflow: hidden;
 }
 
