--- a/assets/syles/style.css
+++ b/assets/syles/style.css
@@ -8,14 +8,14 @@ body {
   width: 100%;
   height: 100vh;
   font-family: sans-serif;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: "Shadows Into Light", cursive;
   overflow: hidden;
 }
 
 .container {
-  background: linear-gradient(rgba(0 0 0 / 40%), rgba(0 0 0 / 40%)),
-    url("../images/scblack.jpg");
-
+  background: 
+    linear-gradient(rgba(0 0 0 / 40%), rgba(0 0 0 / 40%)),
+      url("../images/scblack.jpg");
   width: 100%;
   height: 100%;
   background-position: center;
@@ -32,7 +32,7 @@ h3 {
 }
 
 .title {
-  font-family: 'Shadows Into Light', cursive;
+  font-family: "Shadows Into Light", cursive;
   color: #fceb0031;
   font-size: 30vh;
   font-weight: bold;
@@ -73,7 +73,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearanonce: textfield;
 }
 
@@ -81,7 +81,7 @@ input.weight {
   width: 163px;
   height: 30px;
   padding: 15px 20px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 20px;
   border-radius: 4px;
   background-color: #fff;
@@ -107,7 +107,7 @@ input.weight::placeholder {
   border-radius: 4px;
   background-color: #fff;
   color: #000;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 20px;
 }
 
@@ -115,9 +115,9 @@ input.weight::placeholder {
   border-radius: 5px;
   margin: 7% 0 0 20%;
   padding: 8px 8%;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: "Shadows Into Light", cursive;
   font-weight: bold;
-  background-color: rgb(214, 213, 203);
+  background-color: rgb(214 213 203);
   letter-spacing: 2.5px;
   font-size: 18px;
 }
@@ -127,7 +127,7 @@ input.weight::placeholder {
 }
 
 .precision {
-  margin: 10% 0 5px 0;
+  margin: 10% 0 5px;
   width: 100%;
 }
 
@@ -153,7 +153,7 @@ input.weight::placeholder {
 
 @media screen and (max-width: 768px) {
   #sbform {
-  width: 80vw;
+    width: 80vw;
   }
 
   .balance {
@@ -229,7 +229,7 @@ input.weight::placeholder {
   }
 
   #array-of-weights {
-  width: 97vw;
+    width: 97vw;
     padding-right: 15px;
   }
 }
